updated after runthrough

--- a/slides/slide-sections/section40-hands-on-istio/00-pilot.html
+++ b/slides/slide-sections/section40-hands-on-istio/00-pilot.html
@@ -442,7 +442,7 @@ spec:
 
     <section data-markdown>
         <script type="text/template">
-            ### Let's take a install a service
+            ### Let's see a sample service
 
             Navigate to `$BASE/istio/istio-1.1.5/samples/httpbin`
 
