--- a/slides/slide-sections/section40-hands-on-istio/05-observability.html
+++ b/slides/slide-sections/section40-hands-on-istio/05-observability.html
@@ -1,8 +1,7 @@
 <section data-markdown id="istio-data-model">
   <script type="text/template">
-    ### Destination Policies
+    ### Observability
 
     More to come!
   </script>
-  <!-- https://istio.io/docs/concepts/traffic-management/rules-configuration.html -->
 </section>
